# OSHW-reCamera-Series

./: Sensor_Supported_List.md  readme.md  roadmap.md
B1_Default/: reCamera B101 v0.1.kicad_pro
Realtime_detection_http/www/: .env  .env.development  .env.production  .env.staging  CMakeLists.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts
Realtime_detection_http/www/src/: App.tsx  main.tsx
Realtime_detection_http/www/src/api/: index.ts
Realtime_detection_http/www/src/api/device/: device.d.ts  index.ts
Realtime_detection_http/www/src/api/network/: network.d.ts
Realtime_detection_http/www/src/api/sensecraft/: index.ts
Realtime_detection_http/www/src/assets/style/: antd-reset.css  index.css
Realtime_detection_http/www/src/components/common-popup/: index.tsx
Realtime_detection_http/www/src/components/loading/: index.tsx
Realtime_detection_http/www/src/enum/: index.ts  network.ts
Realtime_detection_http/www/src/layout/: config.tsx  main.tsx
Realtime_detection_http/www/src/layout/mobile/: index.tsx
Realtime_detection_http/www/src/layout/pc/: index.tsx
Realtime_detection_http/www/src/router/: index.tsx
Realtime_detection_http/www/src/store/: platform.ts
Realtime_detection_http/www/src/utils/: noderedRequest.ts  request.ts  sensecraftRequest.ts  supervisorRequest.ts
Realtime_detection_http/www/src/views/dashboard/: index.tsx
Realtime_detection_http/www/src/views/login/: index.tsx
Realtime_detection_http/www/src/views/network/: hook.ts  index.tsx
Realtime_detection_http/www/src/views/overview/: hook.ts  index.tsx
(+280 files in other folders)
